// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DockHost, given rendered given implementations of dock tabs emerge renders 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex align-center"
      >
        <div>
          <div
            data-some-dock-tab-title-test="true"
          >
            Some title
          </div>
        </div>
      </div>
      <div>
        <div
          data-some-dock-tab-content-test="true"
        >
          Some content
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DockHost, given rendered given no implementations of dock tabs, renders 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex align-center"
      />
      <div />
    </div>
  </div>
</body>
`;
